--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         to internal File</a> <br> <br>
 
     <p> <b>Image kept inside folder</b></p>
-    <img src="./Image kept inside folder.jpg" alt="image" width="300px" height="100px">
+    <img src="./image kept inside folder.jpg" alt="image" width="300px" height="100px">
 
     <p> <b>Uploaded image</b></p>
     <img src="https://images.unsplash.com/photo-1575936123452-b67c3203c357?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8aW1hZ2V8ZW58MHx8MHx8&w=1000&q=80"
